tests/parser/statement_case_err4.mtp
begin
	(*missing semicolon after case*)
	case (something) of
	first:
		s := 0
	second:
		s := 1
	else
		s := 99
	end
end
.